--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <div id="quiz-container">
+        <h1>Quiz</h1>
+        <div id="question-container"></div>
+    </div>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
