--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header id="timer"></header>
     <div id="quiz-container">
-        <h1>Quiz</h1>
+        <h1></h1>
         <div id="question-container"></div>
     </div>
 
