Added JS and CSS and some questions

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header id="timer"></header>
     <div class="container">
-        <div id="question-container" class="hide"></div>
+        <div id="question-container" class="hide">
             <div id="question">Question</div>
-            <div id="answe-buttons" class="btn-grid">
+            <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+        </div>
         <div class="controls">
-            <button id="start-button" class="start-button btn">Start</button>
+            <button id="start-button" class="start-button btn">You have 60 seconds to complete the quiz. If you get a question wrong, 4 seconds is removed from the timer!</button>
             <button id="next-button" class="next-button btn hide">Next</button>
         </div>
     </div>
