Added highscore list and score tracking

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </div>
         <div class="controls">
+            <div id="highScoresList"></div>
             <button id="start-button" class="start-button btn">You have 60 seconds to complete the quiz. If you get a question wrong, 4 seconds is removed from the timer!</button>
             <button id="next-button" class="next-button btn hide">Next</button>
         </div>
